<resources>
    <string name="app_name">Bootcamp</string>
    <string name="Login">login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have an Account?</string>
</resources>